--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,10 +29,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 36,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 49,\n",
+       " 50]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [i for i in range(1, 51)]\n",
+    "lst"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,10 +106,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 4,\n",
+       " 6,\n",
+       " 8,\n",
+       " 10,\n",
+       " 12,\n",
+       " 14,\n",
+       " 16,\n",
+       " 18,\n",
+       " 20,\n",
+       " 22,\n",
+       " 24,\n",
+       " 26,\n",
+       " 28,\n",
+       " 30,\n",
+       " 32,\n",
+       " 34,\n",
+       " 36,\n",
+       " 38,\n",
+       " 40,\n",
+       " 42,\n",
+       " 44,\n",
+       " 46,\n",
+       " 48,\n",
+       " 50,\n",
+       " 52,\n",
+       " 54,\n",
+       " 56,\n",
+       " 58,\n",
+       " 60,\n",
+       " 62,\n",
+       " 64,\n",
+       " 66,\n",
+       " 68,\n",
+       " 70,\n",
+       " 72,\n",
+       " 74,\n",
+       " 76,\n",
+       " 78,\n",
+       " 80,\n",
+       " 82,\n",
+       " 84,\n",
+       " 86,\n",
+       " 88,\n",
+       " 90,\n",
+       " 92,\n",
+       " 94,\n",
+       " 96,\n",
+       " 98,\n",
+       " 100,\n",
+       " 102,\n",
+       " 104,\n",
+       " 106,\n",
+       " 108,\n",
+       " 110,\n",
+       " 112,\n",
+       " 114,\n",
+       " 116,\n",
+       " 118,\n",
+       " 120,\n",
+       " 122,\n",
+       " 124,\n",
+       " 126,\n",
+       " 128,\n",
+       " 130,\n",
+       " 132,\n",
+       " 134,\n",
+       " 136,\n",
+       " 138,\n",
+       " 140,\n",
+       " 142,\n",
+       " 144,\n",
+       " 146,\n",
+       " 148,\n",
+       " 150,\n",
+       " 152,\n",
+       " 154,\n",
+       " 156,\n",
+       " 158,\n",
+       " 160,\n",
+       " 162,\n",
+       " 164,\n",
+       " 166,\n",
+       " 168,\n",
+       " 170,\n",
+       " 172,\n",
+       " 174,\n",
+       " 176,\n",
+       " 178,\n",
+       " 180,\n",
+       " 182,\n",
+       " 184,\n",
+       " 186,\n",
+       " 188,\n",
+       " 190,\n",
+       " 192,\n",
+       " 194,\n",
+       " 196,\n",
+       " 198,\n",
+       " 200]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [i for i in range(2, 201) if i%2 == 0]\n",
+    "lst"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,11 +250,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "    \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,10 +267,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.84062117,\n",
+       " 0.7876326,\n",
+       " 0.77109654,\n",
+       " 0.81835917,\n",
+       " 0.87645456,\n",
+       " 0.7066597,\n",
+       " 0.57433389,\n",
+       " 0.92796258,\n",
+       " 0.69814654,\n",
+       " 0.97016248,\n",
+       " 0.71725408,\n",
+       " 0.87702738,\n",
+       " 0.76615487,\n",
+       " 0.57871812,\n",
+       " 0.53222417,\n",
+       " 0.9976855,\n",
+       " 0.80930099,\n",
+       " 0.50962849,\n",
+       " 0.94555126]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[elemento for i in a for elemento in i if elemento >= 0.5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +334,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = []\n",
+    "b = []\n",
+    "e= []\n",
+    "for i in b:\n",
+    "    for c in i:\n",
+    "        for e in i:\n",
+    "            c.append(e)\n",
+    "e\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
