--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -96,12 +96,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### How about re-assign a new value to an existing tuple?\n",
+    "# How about re-assign a new value to an existing tuple?\n",
     "\n",
-    "Re-assign the following elements to `tup`. Are you able to do it? Explain.\n",
+    "#Re-assign the following elements to `tup`. Are you able to do it? Explain.\n",
     "\n",
     "```\n",
     "\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"\n",
