--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -33,12 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "palabras = 0\n",
+    "\n",
+    "' '.join(str_list)\n"
    ]
   },
   {
@@ -50,12 +64,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "grocery_list = []\n",
+    "\n",
+    "for food in food_list:\n",
+    "    if food.lower().startswith(\"b\"):\n",
+    "        grocery_list.append(food.lower())\n",
+    "        \n",
+    "grocery_list = \"Grocery list: \" + (\", \".join(grocery_list)) + \".\"\n",
+    "print(grocery_list)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -69,17 +103,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The area of the circle with radius: 4.5 is: 63.61725123519331'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
-    "string1 = \"The area of the circle with radius:\"\n",
-    "string2  = \"is:\"\n",
+    "string1 = \"The area of the circle with radius: \"\n",
+    "string2  = \" is: \"\n",
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
+    "    \n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -88,9 +134,16 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
+    "    resultado = pi * (x**2)\n",
+    "    return resultado\n",
     "    \n",
-    "    \n",
-    "# Your output string here:"
+    "# Your output string here:\n",
+    "\n",
+    "final = string1 + str(radius) + string2 + str(area(radius))\n",
+    "\n",
+    "final\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -106,9 +159,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'Some',\n",
+       " 1: 'say',\n",
+       " 2: 'the',\n",
+       " 3: 'world',\n",
+       " 4: 'will',\n",
+       " 5: 'end',\n",
+       " 6: 'in',\n",
+       " 7: 'fire',\n",
+       " 8: 'Some',\n",
+       " 9: 'say',\n",
+       " 10: 'in',\n",
+       " 11: 'ice',\n",
+       " 12: 'From',\n",
+       " 13: 'what',\n",
+       " 14: 'I’ve',\n",
+       " 15: 'tasted',\n",
+       " 16: 'of',\n",
+       " 17: 'desireI',\n",
+       " 18: 'hold',\n",
+       " 19: 'with',\n",
+       " 20: 'those',\n",
+       " 21: 'who',\n",
+       " 22: 'favor',\n",
+       " 23: 'fire',\n",
+       " 24: 'But',\n",
+       " 25: 'if',\n",
+       " 26: 'it',\n",
+       " 27: 'had',\n",
+       " 28: 'to',\n",
+       " 29: 'perish',\n",
+       " 30: 'twice',\n",
+       " 31: 'I',\n",
+       " 32: 'think',\n",
+       " 33: 'I',\n",
+       " 34: 'know',\n",
+       " 35: 'enough',\n",
+       " 36: 'of',\n",
+       " 37: 'hateTo',\n",
+       " 38: 'say',\n",
+       " 39: 'that',\n",
+       " 40: 'for',\n",
+       " 41: 'destruction',\n",
+       " 42: 'iceIs',\n",
+       " 43: 'also',\n",
+       " 44: 'greatAnd',\n",
+       " 45: 'would',\n",
+       " 46: 'suffice'}"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +230,17 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "\n",
+    "poem = poem.replace(\"\\n\", \"\").replace(\".\", \" \").replace(\",\",\" \").rstrip().split(\" \")\n",
+    "dict = {}\n",
+    "\n",
+    "for palabra in range (len(poem)):\n",
+    "    dict[palabra] = poem[palabra]\n",
+    "    \n",
+    "dict\n",
+    "\n"
    ]
   },
   {
@@ -238,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
