Add Bonus Solution

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -33,20 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Durante un tiempo no estuvo segura de si su marido era su marido'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
     "# Your code here:\n",
@@ -64,17 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
     "# Your code here:\n",
@@ -103,20 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The area of the circle with radius: 4.5 is: 63.61725123519331'"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -159,66 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 'Some',\n",
-       " 1: 'say',\n",
-       " 2: 'the',\n",
-       " 3: 'world',\n",
-       " 4: 'will',\n",
-       " 5: 'end',\n",
-       " 6: 'in',\n",
-       " 7: 'fire',\n",
-       " 8: 'Some',\n",
-       " 9: 'say',\n",
-       " 10: 'in',\n",
-       " 11: 'ice',\n",
-       " 12: 'From',\n",
-       " 13: 'what',\n",
-       " 14: 'I’ve',\n",
-       " 15: 'tasted',\n",
-       " 16: 'of',\n",
-       " 17: 'desireI',\n",
-       " 18: 'hold',\n",
-       " 19: 'with',\n",
-       " 20: 'those',\n",
-       " 21: 'who',\n",
-       " 22: 'favor',\n",
-       " 23: 'fire',\n",
-       " 24: 'But',\n",
-       " 25: 'if',\n",
-       " 26: 'it',\n",
-       " 27: 'had',\n",
-       " 28: 'to',\n",
-       " 29: 'perish',\n",
-       " 30: 'twice',\n",
-       " 31: 'I',\n",
-       " 32: 'think',\n",
-       " 33: 'I',\n",
-       " 34: 'know',\n",
-       " 35: 'enough',\n",
-       " 36: 'of',\n",
-       " 37: 'hateTo',\n",
-       " 38: 'say',\n",
-       " 39: 'that',\n",
-       " 40: 'for',\n",
-       " 41: 'destruction',\n",
-       " 42: 'iceIs',\n",
-       " 43: 'also',\n",
-       " 44: 'greatAnd',\n",
-       " 45: 'would',\n",
-       " 46: 'suffice'}"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -234,10 +149,11 @@
     "\n",
     "\n",
     "poem = poem.replace(\"\\n\", \"\").replace(\".\", \" \").replace(\",\",\" \").rstrip().split(\" \")\n",
+    "\n",
     "dict = {}\n",
     "\n",
-    "for palabra in range (len(poem)):\n",
-    "    dict[palabra] = poem[palabra]\n",
+    "for palabra in poem:\n",
+    "    dict.update({palabra: len(palabra)})\n",
     "    \n",
     "dict\n",
     "\n"
@@ -257,6 +173,7 @@
    "outputs": [],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
+    "\n",
     "\n",
     "poem = \"\"\"I was angry with my friend; \n",
     "I told my wrath, my wrath did end.\n",
@@ -278,7 +195,16 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "import re\n",
+    "\n",
+    "poem = poem.replace(\"\\n\", \"\").replace(\".\", \" \").replace(\",\",\" \").replace(\";\", \"\").replace(\":\", \"\").rstrip().split(\" \")\n",
+    "\n",
+    "for word in poem:\n",
+    "    if word not in blacklist:\n",
+    "        poem.append(word)\n",
+    "poem\n",
+    "\n"
    ]
   },
   {
@@ -292,14 +218,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'THE APPARITION OF THESE FACES IN THE CROWD;PETALS ON A WET, BLACK BOUGH.'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "poem = poem.replace(\"\\n\", \"\")\n",
+    "poem = poem.upper()\n",
+    "# Your code here:\n",
+    "\n",
+    "poem"
    ]
   },
   {
@@ -311,13 +252,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "import re\n",
     "\n",
-    "# Your code here:\n"
+    "PATRON = r\"(\\w+\\d)\"\n",
+    "\n",
+    "coincidencias = [word for word in data if re.search(PATRON, word)]\n",
+    "\n",
+    "print(coincidencias)\n"
    ]
   },
   {
@@ -333,13 +287,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "\n",
+    "# Your code here:\n",
+    "\n",
+    "PATRON_2 = r\"((\\w)|(\\d))\"\n",
+    "coincidencias_2 = [word for word in data if re.search(PATRON_2, word)]\n",
+    "\n",
+    "print (coincidencias_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
