--- a/module-1/lab-functional-programming/your-code/main.ipynb
+++ b/module-1/lab-functional-programming/your-code/main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
     "\n",
     "# We can now iterate through the object using the next function\n",
     "\n",
-    "print(next(iterator))"
+    "print(next(iterator))\n"
    ]
   },
   {
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
