--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "set1 =  set(sample_list_1)\n"
+    "set1 =  set(sample_list_1)\n",
+    "len(set1)"
    ]
   },
   {
@@ -80,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +109,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "set2 = set (sample_list_2)"
+    "set2 = set (sample_list_2)\n",
+    "len(set2)"
    ]
   },
   {
@@ -114,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,26 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False True False\n"
+     ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "len(set1) == len(set2)\n",
-    "len(set2) == len(set3)\n",
-    "len(set3) == len(set4)\n",
-    "len(set4) == len(set5)"
+    "print(len(set1) == len(set2),\n",
+    "len(set2) == len(set3),\n",
+    "len(set3) == len(set4),\n",
+    "len(set4) == len(set5))"
    ]
   },
   {
@@ -206,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +271,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,24 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False\n"
+     ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "set1.issubset(set2)\n",
-    "set1.issubset(set3)"
+    "print(set1.issubset(set2),\n",
+    "set1.issubset(set3))"
    ]
   },
   {
@@ -300,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -345,9 +363,7 @@
        " 36,\n",
        " 37,\n",
        " 38,\n",
-       " 39,\n",
        " 40,\n",
-       " 41,\n",
        " 42,\n",
        " 43,\n",
        " 44,\n",
@@ -355,6 +371,7 @@
        " 46,\n",
        " 47,\n",
        " 48,\n",
+       " 49,\n",
        " 50,\n",
        " 51,\n",
        " 52,\n",
@@ -363,7 +380,7 @@
        " 55,\n",
        " 56,\n",
        " 57,\n",
-       " 59,\n",
+       " 58,\n",
        " 60,\n",
        " 61,\n",
        " 62,\n",
@@ -371,12 +388,12 @@
        " 64,\n",
        " 65,\n",
        " 66,\n",
+       " 67,\n",
        " 68,\n",
        " 69,\n",
        " 70,\n",
+       " 71,\n",
        " 72,\n",
-       " 73,\n",
-       " 74,\n",
        " 75,\n",
        " 76,\n",
        " 77,\n",
@@ -392,6 +409,7 @@
        " 87,\n",
        " 88,\n",
        " 89,\n",
+       " 90,\n",
        " 91,\n",
        " 92,\n",
        " 93,\n",
@@ -403,7 +421,7 @@
        " 99}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,9 +468,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 10,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 18,\n",
+       " 20,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 30,\n",
+       " 32,\n",
+       " 33,\n",
+       " 37,\n",
+       " 38,\n",
+       " 40,\n",
+       " 42,\n",
+       " 43,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 50,\n",
+       " 52,\n",
+       " 53,\n",
+       " 54,\n",
+       " 55,\n",
+       " 57,\n",
+       " 58,\n",
+       " 60,\n",
+       " 62,\n",
+       " 63,\n",
+       " 64,\n",
+       " 65,\n",
+       " 67,\n",
+       " 68,\n",
+       " 70,\n",
+       " 72,\n",
+       " 75,\n",
+       " 76,\n",
+       " 78,\n",
+       " 80,\n",
+       " 82,\n",
+       " 83,\n",
+       " 84,\n",
+       " 86,\n",
+       " 87,\n",
+       " 88,\n",
+       " 90,\n",
+       " 92,\n",
+       " 93,\n",
+       " 94,\n",
+       " 95,\n",
+       " 96,\n",
+       " 97,\n",
+       " 98]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
@@ -460,7 +553,8 @@
     "\n",
     "for item in set1:\n",
     "    if item in list_to_remove:\n",
-    "        set1.remove(item)\n"
+    "        set1.remove(item)\n",
+    "set1"
    ]
   },
   {
