--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
     "# Your code here:\n",
@@ -53,11 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
     "# Your code here:\n",
@@ -86,9 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The area of the circle with radius: 4.5 is: 63.61725123519331'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -131,9 +161,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Some': 4,\n",
+       " 'say': 3,\n",
+       " 'the': 3,\n",
+       " 'world': 5,\n",
+       " 'will': 4,\n",
+       " 'end': 3,\n",
+       " 'in': 2,\n",
+       " 'fire': 4,\n",
+       " 'ice': 3,\n",
+       " 'From': 4,\n",
+       " 'what': 4,\n",
+       " 'I’ve': 4,\n",
+       " 'tasted': 6,\n",
+       " 'of': 2,\n",
+       " 'desireI': 7,\n",
+       " 'hold': 4,\n",
+       " 'with': 4,\n",
+       " 'those': 5,\n",
+       " 'who': 3,\n",
+       " 'favor': 5,\n",
+       " 'But': 3,\n",
+       " 'if': 2,\n",
+       " 'it': 2,\n",
+       " 'had': 3,\n",
+       " 'to': 2,\n",
+       " 'perish': 6,\n",
+       " 'twice': 5,\n",
+       " 'I': 1,\n",
+       " 'think': 5,\n",
+       " 'know': 4,\n",
+       " 'enough': 6,\n",
+       " 'hateTo': 6,\n",
+       " 'that': 4,\n",
+       " 'for': 3,\n",
+       " 'destruction': 11,\n",
+       " 'iceIs': 5,\n",
+       " 'also': 4,\n",
+       " 'greatAnd': 8,\n",
+       " 'would': 5,\n",
+       " 'suffice': 7}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -218,20 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'THE APPARITION OF THESE FACES IN THE CROWD;PETALS ON A WET, BLACK BOUGH.'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
@@ -252,17 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "import re\n",
@@ -287,17 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
@@ -308,13 +361,6 @@
     "\n",
     "print (coincidencias_2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
