Final proyect, Scrap2.0

--- a/module-1/web-project/your-code/API scrapper.ipynb
+++ b/module-1/web-project/your-code/API scrapper.ipynb
@@ -2,6 +2,145 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "from pandas.io.json import json_normalize \n",
+    "\n",
+    "#ciudad = [Madrid , Barcelona, Valladolid, Sevilla]\n",
+    "ciudad = 'Madrid'\n",
+    "url = 'http://api.openweathermap.org/data/2.5/weather?q=' + ciudad + '&APPID=30c0b644a0a2950cbb356c1cb2747f01'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(url)\n",
+    "results = response.json()\n",
+    "#weather_keys = results.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>base</th>\n",
+       "      <th>clouds.all</th>\n",
+       "      <th>cod</th>\n",
+       "      <th>coord.lat</th>\n",
+       "      <th>coord.lon</th>\n",
+       "      <th>dt</th>\n",
+       "      <th>id</th>\n",
+       "      <th>main.humidity</th>\n",
+       "      <th>main.pressure</th>\n",
+       "      <th>main.temp</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sys.id</th>\n",
+       "      <th>sys.message</th>\n",
+       "      <th>sys.sunrise</th>\n",
+       "      <th>sys.sunset</th>\n",
+       "      <th>sys.type</th>\n",
+       "      <th>timezone</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>weather</th>\n",
+       "      <th>wind.deg</th>\n",
+       "      <th>wind.speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>stations</td>\n",
+       "      <td>0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>40.42</td>\n",
+       "      <td>-3.7</td>\n",
+       "      <td>1561482591</td>\n",
+       "      <td>3117735</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>307</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6443</td>\n",
+       "      <td>0.0125</td>\n",
+       "      <td>1561437939</td>\n",
+       "      <td>1561492134</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7200</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>[{'id': 800, 'main': 'Clear', 'description': '...</td>\n",
+       "      <td>190</td>\n",
+       "      <td>5.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       base  clouds.all  cod  coord.lat  coord.lon          dt       id  \\\n",
+       "0  stations           0  200      40.42       -3.7  1561482591  3117735   \n",
+       "\n",
+       "   main.humidity  main.pressure  main.temp  ...  sys.id  sys.message  \\\n",
+       "0             17           1015        307  ...    6443       0.0125   \n",
+       "\n",
+       "  sys.sunrise  sys.sunset  sys.type  timezone  visibility  \\\n",
+       "0  1561437939  1561492134         1      7200       10000   \n",
+       "\n",
+       "                                             weather  wind.deg  wind.speed  \n",
+       "0  [{'id': 800, 'main': 'Clear', 'description': '...       190         5.1  \n",
+       "\n",
+       "[1 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalized_data = json_normalize(results)\n",
+    "df = normalized_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
